--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -161,10 +161,10 @@
     <wm-view class="dialog-view" name="view1">
         <wm-dialog dialogtype="design-dialog" modal="true" title="Vendor Profile" iconclass="wi wi-file-text" name="viewCompanyDetails" width="75%">
             <wm-dialogactions name="dialogactions1">
-                <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button1"></wm-button>
+                <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button1" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
             <wm-liveform novalidate="false" errormessage="" title="Vendor Info" formlayout="inline" iconclass="wi wi-edit" dataset="bind:Variables.VendorProfile.dataSet.data[0]
-" captionalign="left" captionposition="top" name="liveform4">
+" captionalign="left" captionposition="top" name="liveform4" class="panel-primary">
                 <wm-layoutgrid columns="3" name="layoutgrid5">
                     <wm-gridrow name="gridrow12">
                         <wm-gridcolumn columnwidth="4" name="gridcolumn12_1">
@@ -187,26 +187,26 @@
                             defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].city"></wm-form-field>
                         </wm-gridcolumn>
                         <wm-gridcolumn columnwidth="4" name="gridcolumn16">
-                            <wm-form-field name="country" displayname="Country" required="false" show="true" generator="assigned" primary-key="false" key="country" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true" widget="text"
-                            defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].country"></wm-form-field>
-                        </wm-gridcolumn>
-                        <wm-gridcolumn columnwidth="4" name="gridcolumn17">
                             <wm-form-field name="postalCode" displayname="Postal Code" required="false" show="true" generator="assigned" primary-key="false" key="postalCode" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
                             widget="text" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].postalCode"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn17">
+                            <wm-form-field name="country" displayname="Country" required="false" show="true" generator="assigned" primary-key="false" key="country" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true" widget="text"
+                            defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].country"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow14">
                         <wm-gridcolumn columnwidth="4" name="gridcolumn18_2">
-                            <wm-form-field name="faxNumber" displayname="Fax Number" required="false" show="true" generator="assigned" primary-key="false" key="faxNumber" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                            widget="text" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].faxNumber"></wm-form-field>
-                        </wm-gridcolumn>
-                        <wm-gridcolumn columnwidth="4" name="gridcolumn19">
                             <wm-form-field name="companyPhone" displayname="Company Phone" required="false" show="true" generator="assigned" primary-key="false" key="companyPhone" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
                             widget="text" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].companyPhone"></wm-form-field>
                         </wm-gridcolumn>
-                        <wm-gridcolumn columnwidth="4" name="gridcolumn20">
-                            <wm-form-field name="altPhone" displayname="Alt Phone" required="false" show="true" generator="assigned" primary-key="false" key="altPhone" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn19">
+                            <wm-form-field name="altPhone" displayname="Alternate Phone" required="false" show="true" generator="assigned" primary-key="false" key="altPhone" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
                             widget="text" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].altPhone"></wm-form-field>
+                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn20">
+                            <wm-form-field name="faxNumber" displayname="Fax Number" required="false" show="true" generator="assigned" primary-key="false" key="faxNumber" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                            widget="text" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].faxNumber"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow15">
@@ -219,7 +219,7 @@
                             widget="text" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].companyWebsite"></wm-form-field>
                         </wm-gridcolumn>
                         <wm-gridcolumn columnwidth="4" name="gridcolumn23">
-                            <wm-form-field name="typeOfBusiness" displayname="Type Of Business" required="false" show="true" generator="assigned" primary-key="false" key="typeOfBusiness" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                            <wm-form-field name="typeOfBusiness" displayname="Type of Business" required="false" show="true" generator="assigned" primary-key="false" key="typeOfBusiness" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
                             widget="text" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].typeOfBusiness"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
@@ -229,18 +229,18 @@
                             pc-display="true" mobile-display="true" widget="text" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].businessClassification"></wm-form-field>
                         </wm-gridcolumn>
                         <wm-gridcolumn columnwidth="4" name="gridcolumn25">
-                            <wm-form-field name="stateRegNumber" displayname="State Reg Number" required="false" show="true" generator="assigned" primary-key="false" key="stateRegNumber" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                            widget="text" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].stateRegNumber"></wm-form-field>
+                            <wm-form-field name="numberOfEmployees" displayname="Number of Employees" required="false" show="true" generator="assigned" primary-key="false" key="numberOfEmployees" type="integer" is-related="false" step="0" pc-display="true"
+                            mobile-display="true" widget="number" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].numberOfEmployees"></wm-form-field>
                         </wm-gridcolumn>
                         <wm-gridcolumn columnwidth="4" name="gridcolumn26">
-                            <wm-form-field name="numberOfEmployees" displayname="Number Of Employees" required="false" show="true" generator="assigned" primary-key="false" key="numberOfEmployees" type="integer" is-related="false" step="0" pc-display="true"
-                            mobile-display="true" widget="number" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].numberOfEmployees"></wm-form-field>
+                            <wm-form-field name="stateRegNumber" displayname="State Registration Number" required="false" show="true" generator="assigned" primary-key="false" key="stateRegNumber" type="string" is-related="false" maxchars="255" pc-display="true"
+                            mobile-display="true" widget="text" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].stateRegNumber"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow17_1">
                         <wm-gridcolumn columnwidth="4" name="gridcolumn27_1">
-                            <wm-form-field name="feinNumber" displayname="Fein Number" required="false" show="true" generator="assigned" primary-key="false" key="feinNumber" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                            widget="text" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].feinNumber"></wm-form-field>
+                            <wm-form-field name="feinNumber" displayname="Employer Identification Number (EIN)" required="false" show="true" generator="assigned" primary-key="false" key="feinNumber" type="string" is-related="false" maxchars="255" pc-display="true"
+                            mobile-display="true" widget="text" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].feinNumber"></wm-form-field>
                         </wm-gridcolumn>
                         <wm-gridcolumn columnwidth="4" name="gridcolumn29">
                             <wm-form-field name="insuranceCompany" displayname="Insurance Company" required="false" show="true" generator="assigned" primary-key="false" key="insuranceCompany" type="string" is-related="false" maxchars="255" pc-display="true"
@@ -249,12 +249,12 @@
                     </wm-gridrow>
                     <wm-gridrow name="gridrow18">
                         <wm-gridcolumn columnwidth="4" name="gridcolumn30">
-                            <wm-form-field name="insuranceExpires" displayname="Insurance Expires" required="false" show="true" generator="assigned" primary-key="false" key="insuranceExpires" type="date" is-related="false" pc-display="true" mobile-display="true"
-                            widget="date" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].insuranceExpires"></wm-form-field>
+                            <wm-form-field name="insuranceExpires" displayname="Insurance Expiration Date" required="false" show="true" generator="assigned" primary-key="false" key="insuranceExpires" type="date" is-related="false" pc-display="true" mobile-display="true"
+                            widget="date" defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].insuranceExpires" datepattern="MM-dd-yyyy"></wm-form-field>
                         </wm-gridcolumn>
                         <wm-gridcolumn columnwidth="4" name="gridcolumn31">
                             <wm-form-field name="lastUpdated" displayname="Last Updated" required="false" show="true" generator="assigned" primary-key="false" key="lastUpdated" type="date" is-related="false" pc-display="true" mobile-display="true" widget="date"
-                            defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].lastUpdated"></wm-form-field>
+                            defaultvalue="bind:Variables.VendorProfile.dataSet.data[0].lastUpdated" datepattern="MM-dd-yyyy"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                 </wm-layoutgrid>
@@ -262,16 +262,13 @@
                 <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
                 <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
             </wm-liveform>
-            <wm-grid title="Vendor Licenses" dataset="bind:Variables.VendorLicensesData.dataSet" navigation="Classic" name="grid5">
-                <wm-grid-column binding="licenseNumber" caption="License Number" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
-                <wm-grid-column binding="issuedDate" caption="Issued Date" generator="assigned" pcdisplay="true" mobiledisplay="true" type="date" readonly="true"></wm-grid-column>
-                <wm-grid-column binding="issuingAuthority" caption="Issuing Authority" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
-                <wm-grid-column binding="expirationDate" caption="Expiration Date" generator="assigned" pcdisplay="true" mobiledisplay="true" type="date" readonly="true"></wm-grid-column>
-                <wm-grid-column binding="scope" caption="Scope" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
-                <wm-grid-column binding="vendor.id" caption="Vendor Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true" related-entity-name="Vendor" readonly="true"></wm-grid-column>
-                <wm-grid-column binding="vendor.companyName" caption="Company Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Vendor" readonly="true"></wm-grid-column>
-                <wm-grid-column binding="vendor.address1" caption="Vendor Address1" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Vendor" readonly="true"></wm-grid-column>
-                <wm-grid-column binding="vendor.address2" caption="Vendor Address2" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Vendor" readonly="true"></wm-grid-column>
+            <wm-grid title="Licenses" dataset="bind:Variables.VendorLicensesData.dataSet" navigation="Classic" name="grid5" class="panel-primary" filtermode="multicolumn" exportformat="EXCEL" iconclass="wi wi-notepad">
+                <wm-grid-column binding="vendorLicenseTypes.licenseType" caption="License Type" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="VendorLicenseTypes"></wm-grid-column>
+                <wm-grid-column binding="licenseNumber" caption="License Number" type="string" generator="assigned" readonly="true" show="true"></wm-grid-column>
+                <wm-grid-column binding="issuedDate" caption="Issued Date" type="date" generator="assigned" readonly="true" show="true"></wm-grid-column>
+                <wm-grid-column binding="issuingAuthority" caption="Issuing Authority" type="string" generator="assigned" readonly="true" show="true"></wm-grid-column>
+                <wm-grid-column binding="expirationDate" caption="Expiration Date" type="date" generator="assigned" readonly="true" show="true"></wm-grid-column>
+                <wm-grid-column binding="scope" caption="Scope" type="string" generator="assigned" readonly="true" show="true"></wm-grid-column>
             </wm-grid>
             <wm-livegrid name="livegrid5_1"></wm-livegrid>
             <wm-livegrid name="livegrid5">
